test/cases/parser/AllocatedSyntax.errors
src/AllocatedSyntax.b:5:11: Syntax error (expected 'allocated' or 'allocated_always')
