test/cases/parser/AllocatedSyntax.b
module AllocatedSyntax

interface {}

type Foo (bad);
